# CYK-Algorithm

./: CMakeLists.txt  README.md  build.sh  clear.sh  main.cpp  main_test.cpp
include/: CYK_Parser.h  Grammar.h  States.h
src/: CYK_Parser.cpp  Grammar.cpp  States.cpp
